OpenApi implemented and configuration to allow token header